# optimization-dft-rust

./: Cargo.toml  get_stats.py
src/: main.rs  nonparallel.rs  parallel.rs
