[package]
name = "dft-course"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.4"
num = "0.4.0"
rand = "0.8.5"
ndarray = { version="0.15.6", features=["rayon"]}

[[bin]]
name = "parallel"
path = "src/parallel.rs"

[[bin]]
name = "nonparallel"
path = "src/nonparallel.rs"